--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bolt-expo-starter",
+  "name": "tf-app-flight-page",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "private": true,
@@ -11,7 +11,6 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
-    "@lucide/lab": "^0.1.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@supabase/supabase-js": "^2.58.0",
